Got the mp3 upload and final feed csv done

--- a/scrape.ipynb
+++ b/scrape.ipynb
@@ -18,17 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import time\n",
+    "import boto3\n",
     "import requests\n",
     "import pandas as pd\n",
     "import urllib.request\n",
     "from datetime import date\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "from boto3.s3.transfer import S3Transfer"
    ]
   },
   {
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,20 +149,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4830"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(unique_links)"
    ]
@@ -181,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,19 +291,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scraping https://studsterkel.wfmt.com/programs/horton-foote-discusses-his-play-young-man-atlanta\n",
-      "Scraping https://studsterkel.wfmt.com/programs/interview-ravi-shankar\n",
-      "Failed with status code 404\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for url in dud_list:\n",
     "    d = scrape_program(url)\n",
@@ -332,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,21 +404,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-154-8321e2600815>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munique_links\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert len(df) == len(unique_links)"
    ]
@@ -451,22 +420,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True     2516\n",
-       "False    2313\n",
-       "Name: has_mp3_url, dtype: int64"
-      ]
-     },
-     "execution_count": 225,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.has_mp3_url.value_counts()"
    ]
@@ -480,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,48 +508,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published/5942.mp3 to mp3/5942.mp3\n",
-      "Downloading https://wfmt-studs-terkel.s3.amazonaws.com/published/33494.mp3 to mp3/33494.mp3\n",
-      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published/18777.mp3 to mp3/18777.mp3\n",
-      "Downloading https://wfmt-studs-terkel.s3.amazonaws.com/published%2F32660.mp3 to mp3/published%2F32660.mp3\n",
-      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published/11142.mp3 to mp3/11142.mp3\n",
-      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published/10766.mp3 to mp3/10766.mp3\n",
-      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published/10125.mp3 to mp3/10125.mp3\n",
-      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published/6826.mp3 to mp3/6826.mp3\n",
-      "Downloading https://wfmt-studs-terkel.s3.amazonaws.com/published%2F37043.mp3 to mp3/published%2F37043.mp3\n",
-      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published/19604.mp3 to mp3/19604.mp3\n",
-      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published/6905.mp3 to mp3/6905.mp3\n",
-      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published/10734.mp3 to mp3/10734.mp3\n",
-      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published/9802.mp3 to mp3/9802.mp3\n",
-      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published/9901.mp3 to mp3/9901.mp3\n",
-      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published/11705.mp3 to mp3/11705.mp3\n",
-      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published/11909.mp3 to mp3/11909.mp3\n",
-      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published%2F26548.mp3 to mp3/published%2F26548.mp3\n",
-      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published%2F22930.mp3 to mp3/published%2F22930.mp3\n",
-      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published/9013.mp3 to mp3/9013.mp3\n",
-      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published/14128.mp3 to mp3/14128.mp3\n",
-      "Downloading https://wfmt-studs-terkel.s3.amazonaws.com/published%2F38033.mp3 to mp3/published%2F38033.mp3\n",
-      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published/13921.mp3 to mp3/13921.mp3\n",
-      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published/9924.mp3 to mp3/9924.mp3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "feed_df['mp3_path'] = feed_df.mp3_url.apply(download_mp3)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Write out to CSV"
+    "def _get_s3_client(bucket, region=\"us-east-1\"):\n",
+    "    \"\"\"\n",
+    "    Returns a transfer client ready to upload files to an s3 bucket.\n",
+    "    Provide the S3 bucket name and region.\n",
+    "    \"\"\"\n",
+    "    credentials = { \n",
+    "        'aws_access_key_id': os.getenv('AWS_ACCESS_KEY_ID'),\n",
+    "        'aws_secret_access_key': os.getenv('AWS_ACCESS_KEY_SECRET')\n",
+    "    }\n",
+    "    client = boto3.client('s3', region, **credentials)\n",
+    "    return S3Transfer(client)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bucket = 'studs-terkel-radio-archive-feed'\n",
+    "client = _get_s3_client(bucket)\n",
+    "for path in list(feed_df.mp3_path):\n",
+    "    print(f\"Uploading {path} to {bucket}\")\n",
+    "    client.upload_file(\n",
+    "        path,\n",
+    "        bucket,\n",
+    "        path,\n",
+    "        extra_args={'ACL': 'public-read', 'ContentType': 'audio/mpeg'}\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feed_df['feed_url'] = feed_df.mp3_path.apply(lambda x: f'https://studs-terkel-radio-archive-feed.s3.amazonaws.com/{x}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feed_df.sort_values([\"feed_date\"]).to_csv(\"./data/feed.csv\", index=False)"
    ]
   }
  ],
