--- a/scrape.ipynb
+++ b/scrape.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,6 +324,7 @@
     "    \"Ownership\": \"ownership\",\n",
     "    \"Language\": \"language\",\n",
     "    \"Program Sponsor\": \"program_sponsor\",\n",
+    "    \"Duration\": \"duration\"\n",
     "})"
    ]
   },
