Fixed some links

--- a/scrape.ipynb
+++ b/scrape.ipynb
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,12 +462,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "programs = pd.read_csv(\"./data/programs.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "feed_df = sked[~pd.isnull(sked.archive_url)].merge(\n",
-    "    df,\n",
+    "    programs,\n",
     "    on=\"archive_url\",\n",
     "    how=\"inner\"\n",
     ")"
@@ -475,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +497,7 @@
     "        return None\n",
     "    \n",
     "    # Build the local path using the URL\n",
-    "    filename = mp3_url.split(\"/\")[-1]\n",
+    "    filename = mp3_url.split(\"/\")[-1].replace(\"published%2F\", \"\")\n",
     "    filepath = f\"mp3/{filename}\"\n",
     "    \n",
     "    # If the file is already downloaded, we're good to go\n",
@@ -509,16 +518,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://wfmt-studs-terkel.s3.amazonaws.com/published%2F40605.mp3 to mp3/40605.mp3\n",
+      "Downloading https://wfmt-studs-terkel.s3.amazonaws.com/published%2F33489.mp3 to mp3/33489.mp3\n",
+      "Already downloaded to mp3/6537.mp3\n",
+      "Already downloaded to mp3/28275.mp3\n",
+      "Already downloaded to mp3/10904.mp3\n",
+      "Already downloaded to mp3/2158.mp3\n",
+      "Already downloaded to mp3/5942.mp3\n",
+      "Already downloaded to mp3/33494.mp3\n",
+      "Already downloaded to mp3/18777.mp3\n",
+      "Downloading https://wfmt-studs-terkel.s3.amazonaws.com/published%2F32660.mp3 to mp3/32660.mp3\n",
+      "Already downloaded to mp3/11142.mp3\n",
+      "Already downloaded to mp3/10766.mp3\n",
+      "Already downloaded to mp3/10125.mp3\n",
+      "Already downloaded to mp3/6826.mp3\n",
+      "Downloading https://wfmt-studs-terkel.s3.amazonaws.com/published%2F37043.mp3 to mp3/37043.mp3\n",
+      "Already downloaded to mp3/19604.mp3\n",
+      "Already downloaded to mp3/6905.mp3\n",
+      "Already downloaded to mp3/10734.mp3\n",
+      "Already downloaded to mp3/9802.mp3\n",
+      "Already downloaded to mp3/9901.mp3\n",
+      "Already downloaded to mp3/11705.mp3\n",
+      "Already downloaded to mp3/11909.mp3\n",
+      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published%2F26548.mp3 to mp3/26548.mp3\n",
+      "Downloading https://s3.amazonaws.com/wfmt-studs-terkel/published%2F22930.mp3 to mp3/22930.mp3\n",
+      "Already downloaded to mp3/9013.mp3\n",
+      "Already downloaded to mp3/14128.mp3\n",
+      "Downloading https://wfmt-studs-terkel.s3.amazonaws.com/published%2F38033.mp3 to mp3/38033.mp3\n",
+      "Already downloaded to mp3/13921.mp3\n",
+      "Already downloaded to mp3/9924.mp3\n"
+     ]
+    }
+   ],
    "source": [
     "feed_df['mp3_path'] = feed_df.mp3_url.apply(download_mp3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,9 +582,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uploading mp3/40605.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/33489.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/6537.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/28275.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/10904.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/2158.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/5942.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/33494.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/18777.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/32660.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/11142.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/10766.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/10125.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/6826.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/37043.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/19604.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/6905.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/10734.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/9802.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/9901.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/11705.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/11909.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/26548.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/22930.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/9013.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/14128.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/38033.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/13921.mp3 to studs-terkel-radio-archive-feed\n",
+      "Uploading mp3/9924.mp3 to studs-terkel-radio-archive-feed\n"
+     ]
+    }
+   ],
    "source": [
     "bucket = 'studs-terkel-radio-archive-feed'\n",
     "client = _get_s3_client(bucket)\n",
@@ -555,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
